sfdx-source/force-app/main/default/objects/OIAttributesValidation__mdt/OIAttributesValidation__mdt.object-meta.xml
<CustomObject>
    <description>LEM-13227 : Onboarding Inputs Epic</description>
    <label>OIAttributesValidation</label>
    <pluralLabel>OIAttributesValidations</pluralLabel>
</CustomObject>