sfdx-source/force-app/main/default/objects/OIAttributesValidation__mdt/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Required</fullName>
                <default>true</default>
                <label>Required</label>
            </value>
            <value>
                <fullName>NotRequired</fullName>
            </value>
            <value>
                <fullName>Allowed</fullName>
            </value>
            <value>
                <fullName>NotAllowed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>