sfdx-source/force-app/main/default/objects/OIAttributesValidation__mdt/fields/Allow_Not_Allow_value__c.field-meta.xml
<CustomField>
    <fullName>Allow_Not_Allow_value__c</fullName>
    <label>Allow/Not Allow value</label>
    <type>TextArea</type>
</CustomField>