sfdx-source/force-app/main/default/objects/OIAttributesValidation__mdt/fields/Custom_Code__c.field-meta.xml
<CustomField>
    <fullName>Custom_Code__c</fullName>
    <label>Custom Code</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>