sfdx-source/force-app/main/default/objects/OIAttributesValidation__mdt/fields/FieldConditionOperator__c.field-meta.xml
<CustomField>
    <fullName>FieldConditionOperator__c</fullName>
    <label>FieldConditionOperator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Equal</fullName>
                <default>true</default>
                <label>Equal</label>
            </value>
            <value>
                <fullName>NotEqualTo</fullName>
            </value>
            <value>
                <fullName>GreaterThan</fullName>
            </value>
            <value>
                <fullName>GreaterThanEqualTo</fullName>
            </value>
            <value>
                <fullName>LessThan</fullName>
            </value>
            <value>
                <fullName>LessThanEqualTo</fullName>
            </value>
            <value>
                <fullName>Contains</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>