sfdx-source/force-app/main/default/objects/OIAttributesValidation__mdt/fields/FieldConditionValue__c.field-meta.xml
<CustomField>
    <fullName>FieldConditionValue__c</fullName>
    <label>FieldConditionValue</label>
    <type>TextArea</type>
</CustomField>