sfdx-source/force-app/main/default/objects/OIAttributesValidation__mdt/fields/FieldSource__c.field-meta.xml
<CustomField>
    <fullName>FieldSource__c</fullName>
    <label>FieldSource</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Form Field</fullName>
                <default>true</default>
                <label>Form Field</label>
            </value>
            <value>
                <fullName>Field Object</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>