sfdx-source/force-app/main/default/objects/OIAttributesValidation__mdt/fields/FieldTocheck__c.field-meta.xml
<CustomField>
    <fullName>FieldTocheck__c</fullName>
    <label>FieldTocheck</label>
    <length>50</length>
    <type>Text</type>
</CustomField>