sfdx-source/force-app/main/default/objects/OIAttributesValidation__mdt/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <label>Object Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>