sfdx-source/force-app/main/default/objects/OIAttributesValidation__mdt/fields/Validation_Type__c.field-meta.xml
<CustomField>
    <fullName>Validation_Type__c</fullName>
    <label>Validation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Simple</fullName>
                <default>true</default>
                <label>Simple</label>
            </value>
            <value>
                <fullName>Custom Code</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>